<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="62dp"
    android:paddingLeft="36dp"
    android:paddingRight="36dp">

    <TextView
        android:text="@string/resultHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textSize="32dp"
        android:id="@+id/resultHeadline"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:id="@+id/resultNumber" />

    <TextView
        android:text="@string/resultHoles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/holes"
        android:layout_below="@id/resultNumber"
        android:textSize="22dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>


    <Button
        android:text="@string/resultDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/White"
        android:background="@drawable/mybutton"
        android:enabled="true"
        android:elevation="10dp"
        android:id="@+id/done" />
</RelativeLayout>